docs: normalize product catalog, sync products.md, update progress, add AI guide

--- a/docs/status/progress.yaml
+++ b/docs/status/progress.yaml
@@ -1,6 +1,6 @@
-last_updated: "2025-01-27"
+last_updated: "2025-09-14"
 phase: "Planning & Documentation"
-completion_percentage: 5
+completion_percentage: 8
 
 completed_features:
   - id: "project_setup"
@@ -23,6 +23,14 @@ completed_features:
     status: "complete"
     completion_date: "2025-01-27"
     description: "Vercel deployment strategy defined"
+  - id: "product_catalog_normalized"
+    status: "complete"
+    completion_date: "2025-09-14"
+    description: "Structured product data in docs/data/products.yaml"
+  - id: "ai_docs_refresh"
+    status: "complete"
+    completion_date: "2025-09-14"
+    description: "AI context guide and products.md synced to YAML"
 
 current_priorities:
   - id: "development_environment"
